welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: not found: value <
case (hour<7) => return false
          ^parotTrouble:4: error: not found: value &&
case (hour>=7) && hour<=20 => return true
               ^parotTrouble:5: error: not found: value >
case (hour>20) => return false
          ^